v0.0.3-Barbet
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>